Emitter particle system viewport display axis/cross/circle shows only first two particles #71461

Closed
opened 2019-11-09 21:12:32 +01:00 by Kevin Buhr · 10 comments

System Information
Operating system: Linux-4.15.0-66-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.26

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-08 22:59, hash: 0a0d735acd
Worked: version: 2.80 downloaded from blender.org (blender-2.80-linux-glibc217-x86_64.tar.bz2)

Short description of error
For an emitter particle system, Viewport Display -> Display As -> Circle/Cross/Axis show only first two particles (see screenshot). This seems partially GPU/driver-dependent, as I've been able to duplicate with two separate Nvidia video cards (using both a very old and a brand new version of the proprietary driver, as described below), but the bug is not reproducible on my laptop w/ integrated Intel graphics using the same Blender version.

Specifically, I've duplicated this problem with the above Blender 2.8.1 version (beta download from blender.org in blender-2.81-0a0d735acd6e-linux-glibc217-x86_64.tar.bz2) on:

 Machine #1: Ubuntu 18.04 w/ GTX 1080 using Nvidia driver version 440.26
 Machine #2: Mint 19 w/ GTX 760 using Nvidia driver version 390.116

I've also verified that the Blender 2.8.2 alpha version and a version built from a recent Git pull exhibit the problem, but the stable 2.80 version (blender-2.80-linux-glibc217-x86_64.tar.bz2) works fine.

Exact steps for others to reproduce the error

  1. File -> New -> General
  2. Select default cube
  3. Add a particle system
  4. Start animation -- particle system is displayed in viewport.
  5. Switch Particle Properties -> Viewport Display -> Display As from "Rendered" to any of Circle/Cross/Axis. Particles disappear, and when animation restarts from frame 1, only first two particles are shown.
  6. Switch Display As back to "Rendered" or "Point", and normal particle system display reappears

Screenshot
Screenshot from 2019-11-09 14-07-28.png

**System Information** Operating system: Linux-4.15.0-66-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.26 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-08 22:59, hash: `0a0d735acd` Worked: version: 2.80 downloaded from blender.org (blender-2.80-linux-glibc217-x86_64.tar.bz2) **Short description of error** For an emitter particle system, Viewport Display -> Display As -> Circle/Cross/Axis show only first two particles (see screenshot). This seems partially GPU/driver-dependent, as I've been able to duplicate with two separate Nvidia video cards (using both a very old and a brand new version of the proprietary driver, as described below), but the bug is not reproducible on my laptop w/ integrated Intel graphics using the same Blender version. Specifically, I've duplicated this problem with the above Blender 2.8.1 version (beta download from blender.org in blender-2.81-0a0d735acd6e-linux-glibc217-x86_64.tar.bz2) on: ``` Machine #1: Ubuntu 18.04 w/ GTX 1080 using Nvidia driver version 440.26 Machine #2: Mint 19 w/ GTX 760 using Nvidia driver version 390.116 ``` I've also verified that the Blender 2.8.2 alpha version and a version built from a recent Git pull exhibit the problem, but the stable 2.80 version (blender-2.80-linux-glibc217-x86_64.tar.bz2) works fine. **Exact steps for others to reproduce the error** 1. File -> New -> General 2. Select default cube 3. Add a particle system 4. Start animation -- particle system is displayed in viewport. 5. Switch Particle Properties -> Viewport Display -> Display As from "Rendered" to any of Circle/Cross/Axis. Particles disappear, and when animation restarts from frame 1, only first two particles are shown. 6. Switch Display As back to "Rendered" or "Point", and normal particle system display reappears **Screenshot** ![Screenshot from 2019-11-09 14-07-28.png](https://archive.blender.org/developer/F8007201/Screenshot_from_2019-11-09_14-07-28.png)
Author

Added subscriber: @buhr

Added subscriber: @buhr
Author

A "git bisect" blames this commit:

3a08153d7a842b7ab1e40a9048730e1a3ddab5f7 is the first bad commit
commit 3a08153d7a842b7ab1e40a9048730e1a3ddab5f7
Author: Clément Foucault <foucault.clem@gmail.com>
Date:   Fri May 31 01:45:41 2019 +0200

    DRW: Refactor to support draw call batching
    
    Reviewers: brecht
    
    Differential Revision: D4997

A "git bisect" blames this commit: ``` 3a08153d7a842b7ab1e40a9048730e1a3ddab5f7 is the first bad commit commit 3a08153d7a842b7ab1e40a9048730e1a3ddab5f7 Author: Clément Foucault <foucault.clem@gmail.com> Date: Fri May 31 01:45:41 2019 +0200 DRW: Refactor to support draw call batching Reviewers: brecht Differential Revision: D4997 ```
Author

And a "git bisect" of the tmp-drw-callbatching branch identifies this as the bad commit:

commit d2e9e2713a943cfd3585784bf59f650369c305ed (HEAD, refs/bisect/bad)
Author: Clément Foucault <foucault.clem@gmail.com>
Date:   Sat Jun 1 16:34:50 2019 +0200

    DRW: Use Model Matrix UBO blocks when possible
    
    This bind the correct UBO block and pass the id inside the block
    using a single int uniform.
    
    There is still a legacy path for shader not using the modelBlock

And a "git bisect" of the tmp-drw-callbatching branch identifies this as the bad commit: ``` commit d2e9e2713a943cfd3585784bf59f650369c305ed (HEAD, refs/bisect/bad) Author: Clément Foucault <foucault.clem@gmail.com> Date: Sat Jun 1 16:34:50 2019 +0200 DRW: Use Model Matrix UBO blocks when possible This bind the correct UBO block and pass the id inside the block using a single int uniform. There is still a legacy path for shader not using the modelBlock ```
Author

I guess the issue is that, when rendering particles as circles/crosses/axes, all the instances are intended to share the same resource_id, so we want to enable IN_PLACE_INSTANCES in the associated particle shaders. I've created a patch as D6220, though I'm not sure what reviewers to assign, etc.

I guess the issue is that, when rendering particles as circles/crosses/axes, all the instances are intended to share the same `resource_id`, so we want to enable `IN_PLACE_INSTANCES` in the associated particle shaders. I've created a patch as [D6220](https://archive.blender.org/developer/D6220), though I'm not sure what reviewers to assign, etc.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Nice catch.

Also note that #63523 (Emission Particle Viewport Display Bugs) was marked resolved (but that was prior to 3a08153d7a...).
So it was indeed working at some point [2.80 release was fine], regarding to our triaging playbook, will set to High prio, since we know the breaking commit...

Nice catch. Also note that #63523 (Emission Particle Viewport Display Bugs) was marked resolved (but that was prior to 3a08153d7a...). So it was indeed working at some point [2.80 release was fine], regarding to our triaging playbook, will set to High prio, since we know the breaking commit...

This issue was referenced by 8c9e6f123a

This issue was referenced by 8c9e6f123a2b26cb6cc7585a49fb2a09bdeba09d

This issue was referenced by 13d8c5b184da6a728999ff77d99596e95f20b12b

This issue was referenced by 13d8c5b184da6a728999ff77d99596e95f20b12b

This issue was referenced by 1e25c23d8d1052800c649553145b26fd78f845be

This issue was referenced by 1e25c23d8d1052800c649553145b26fd78f845be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Germano Cavalcante self-assigned this 2019-11-11 18:30:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71461
No description provided.